# Educational

./: .gitignore
libuv/: CMakeLists.txt
libuv/src/: cat.c  fs.c  hello_world.c  idle.c  pipe.c  tcp_server.c
