CMAKE_MINIMUM_REQUIRED(VERSION 3.0.2)
PROJECT(libuv_educational)

FILE(GLOB UV_EXAMPLES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} src/*.c)

FOREACH (EXAMPLE ${UV_EXAMPLES})
  GET_FILENAME_COMPONENT(EXAMPLE_EXECUTABLE ${EXAMPLE} NAME_WE)
  ADD_EXECUTABLE(${EXAMPLE_EXECUTABLE} ${EXAMPLE})
  TARGET_LINK_LIBRARIES(${EXAMPLE_EXECUTABLE} uv)
ENDFOREACH (EXAMPLE)
